# vpngate.net

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  install.sh
backend/: pyproject.toml
backend/app/: __init__.py  config.py  controller.py  main.py  models.py  storage.py
backend/app/services/: __init__.py  connectors.py  dashboard_auth.py  hysteria.py  ip_intel.py  scoring.py  system.py  vpngate.py
backend/tests/: test_api.py  test_failover.py  test_hysteria.py  test_scoring.py  test_vpngate_parser.py
backend/vpngate_controller_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: HY2-NATIVE-DEPLOYMENT.zh-CN.md  VPNGATE-OPENVPN-DEPLOYMENT.zh-CN.md
docs/plans/: 2026-03-10-hy2-native-design.md  2026-03-10-hy2-native.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  style.css  types.ts
frontend/src/components/: DashboardLoginCard.vue  DashboardPasswordCard.vue  HysteriaPanel.vue  ServerTable.vue  StatusPanel.vue  ToolbarPanel.vue
frontend/src/lib/: api.ts  format.ts
frontend/tests/: app.spec.ts  dashboard-login-card.spec.ts  dashboard-password-card.spec.ts  format.spec.ts  hysteria-panel.spec.ts
scripts/: install-debian.sh  install-wsl.sh  start-controller.sh
systemd/: vpngate-controller.service
